fixed alignment of upward arrow (#843)
* fixed alignment of upward arrow

* fixed visibility of arrow

* formatting

---------

--- a/src/index.css
+++ b/src/index.css
@@ -238,19 +238,25 @@ input:focus {
 }
 
 .scrollTop {
-  align-self: center;
-  animation: fadeIn 0.2s;
+  /* align-self: center; 
+   animation: fadeIn 0.2s;
   bottom: 20px;
   cursor: pointer;
   display: flex;
-  height: 60px;
+  height: 50px;
   justify-content: center;
-  left: 50%;
   opacity: 0.9;
   position: fixed;
+  left: 18%;
   transition: opacity 0.4s;
   width: 60px;
-  z-index: 1000;
+  z-index: 1000; */
+  position: fixed;
+  bottom: 4%;
+  height: 50px;
+  width: 50px;
+  margin-left: -29%;
+  cursor: pointer;
 }
 
 .scrollTop:hover {
@@ -258,10 +264,10 @@ input:focus {
 }
 
 /* Extra small devices (phones, 600px and down) */
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 790px) {
   .scrollTop {
-    left: 43%;
-    margin-bottom: 2em;
+    margin-left: 20px;
+    margin-bottom: 8%;
   }
   .post-page-container {
     padding: 0;
@@ -276,9 +282,6 @@ input:focus {
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 600px) {
-  .scrollTop {
-    left: 45.6%;
-  }
   .app__newpost__button {
     left: -4.8%;
   }
@@ -286,10 +289,6 @@ input:focus {
 
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
-  .scrollTop {
-    left: 46.6%;
-  }
-
   .sideToTop {
     left: 19.6%;
   }
@@ -301,10 +300,6 @@ input:focus {
 
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 911px) {
-  .scrollTop {
-    left: 47.2%;
-  }
-
   .sideToTop {
     left: 19.6%;
   }
@@ -315,7 +310,7 @@ input:focus {
 }
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
-@media only screen and (min-width: 1200px) {
+@media only screen and (min-width: 800px) {
   .app__posts {
     display: flex;
     flex-wrap: wrap;
@@ -329,7 +324,7 @@ input:focus {
     margin: 50px auto !important;
   }
   .scrollTop {
-    left: 47.7%;
+    left: 40.7%;
   }
 
   .sideToTop {
@@ -341,6 +336,12 @@ input:focus {
   }
   .home-posts-container .app_posts_column {
     padding: 5.5em 20px 20px 17vw;
+  }
+}
+
+@media (min-width: 1200px) {
+  .scrollTop {
+    left: 47.7%;
   }
 }
 
